--- a/css/main.scss
+++ b/css/main.scss
@@ -41,3 +41,4 @@ $gray:#666666;
 @import "components/shop";
 @import "components/fullscreen-menu.scss";
 @import "components/specs";
+@import "components/team";
