--- a/css/main.scss
+++ b/css/main.scss
@@ -42,3 +42,4 @@ $gray:#666666;
 @import "components/fullscreen-menu.scss";
 @import "components/specs";
 @import "components/team";
+@import "components/modal";
