--- a/css/components/footer.scss
+++ b/css/components/footer.scss
@@ -5,6 +5,8 @@
         display: flex;
         flex-direction: column;
         justify-items: center;
+        align-items: center;
+        margin-bottom: rem(20px);
         &__phone{
             align-items: center;
             
