Снова футер предатель, исправление на десктопе

--- a/css/components/footer.scss
+++ b/css/components/footer.scss
@@ -5,7 +5,9 @@
         display: flex;
         flex-direction: column;
         justify-items: center;
-        align-items: center;
+        @include tablets{
+            align-items: center;
+        }
         margin-bottom: rem(20px);
         &__phone{
             align-items: center;
