--- a/css/main.css
+++ b/css/main.css
@@ -1194,10 +1194,14 @@ img {
       -ms-flex-direction: column;
           flex-direction: column;
   justify-items: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
   margin-bottom: 1.25rem;
+}
+@media screen and (max-width: 768px) {
+  .footer__contacts {
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
 }
 .footer__contacts__phone {
   -webkit-box-align: center;
