Готовы апи, кроме мобилок. OnePageScrl и gulp не готово

--- a/css/main.scss
+++ b/css/main.scss
@@ -43,3 +43,5 @@ $gray:#666666;
 @import "components/specs";
 @import "components/team";
 @import "components/modal";
+@import "components/colors";
+@import "components/player";
