--- a/css/components/map.scss
+++ b/css/components/map.scss
@@ -1,20 +1,9 @@
 .map{
-    display: flex;
-    justify-content: center;
-    width: 90wv;
-    height: 652px;
-    @include tablets{
-        height: 526px;
-    }
-    @include phones{
-        height: 482px;
-    }
-
-    &__image{
-        display: block;
-        width: 100%;
-        height: 100%;
-        background: url("../img/map.svg") center center no-repeat;
-        background-size: cover;
-    }
+    width: 100vw;
+    height: 100vh;
+   &__image{
+    width: 100%;
+    height: 100%;
+   }
 }
+
