--- a/css/main.css
+++ b/css/main.css
@@ -1333,31 +1333,12 @@ img {
 }
 
 .map {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  width: 90wv;
-  height: 652px;
-}
-@media screen and (max-width: 768px) {
-  .map {
-    height: 526px;
-  }
-}
-@media screen and (max-width: 480px) {
-  .map {
-    height: 482px;
-  }
+  width: 100vw;
+  height: 100vh;
 }
 .map__image {
-  display: block;
   width: 100%;
   height: 100%;
-  background: url("../img/map.svg") center center no-repeat;
-  background-size: cover;
 }
 
 .shop {
@@ -1972,4 +1953,350 @@ img {
 
 .btn-close {
   margin-top: 1.125rem;
+}
+
+.colors {
+  background-color: #FFF;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: end;
+  height: 100vh;
+  color: #FFF;
+  background: url(.././img/Colors/Colors_background.png) no-repeat;
+  background-position: 70% 0;
+  background-size: 2500px 100%;
+  position: relative;
+}
+.colors__title {
+  font-size: 3rem;
+  line-height: 3.25rem;
+  position: absolute;
+  color: #FFF;
+  top: 10%;
+  left: 5%;
+}
+.colors__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: end;
+  height: 100%;
+}
+.colors__content {
+  width: 0;
+  overflow: hidden;
+  background-color: rgba(89, 89, 89, 0.9);
+  -webkit-backdrop-filter: blur(10px);
+          backdrop-filter: blur(10px);
+  -webkit-transition: width 0.4s;
+  transition: width 0.4s;
+}
+.colors__content--red {
+  background: rgba(124, 17, 33, 0.9);
+  -webkit-backdrop-filter: blur(10px);
+          backdrop-filter: blur(10px);
+}
+.colors__content.active {
+  width: 24.375rem;
+  -webkit-transition: width 0.4s;
+  transition: width 0.4s;
+}
+@media screen and (max-width: 768px) {
+  .colors__content.active {
+    width: calc(100vw - 285px);
+  }
+}
+@media screen and (max-width: 480px) {
+  .colors__content.active {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    position: absolute;
+    top: 0;
+    left: 89px;
+    height: 100vh;
+    width: 100vw;
+    z-index: 3;
+  }
+}
+.colors__content-block {
+  width: 400px;
+  padding: 5% 8%;
+  font-family: "Alegreya Sans";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 1.0008625rem;
+  line-height: 1.5rem;
+}
+
+.color {
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+.color__name {
+  -webkit-transition: 0.2s;
+  transition: 0.2s;
+  height: 100%;
+  width: 6.375rem;
+  cursor: pointer;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  position: relative;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: end;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+.color__name--gray {
+  background: #999999;
+}
+.color__name--black {
+  background: #000000;
+}
+.color__name--red {
+  background: #E01F3C;
+}
+.color__name-content {
+  -webkit-transform: rotate(-90deg) translateX(50%);
+          transform: rotate(-90deg) translateX(50%);
+  white-space: nowrap;
+  font-family: "Alegreya Sans";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 43px;
+}
+
+@media screen and (max-width: 480px) {
+  .color__name.active {
+    -webkit-transition: 0.4s;
+    transition: 0.4s;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    top: 0;
+    left: 0;
+    position: absolute;
+    height: 100vh;
+  }
+}
+.player {
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  display: block;
+  width: 41.375rem;
+  height: 24.5rem;
+}
+.player-media {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+.player-media .container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+.player-container {
+  max-width: 662px;
+}
+.player__controls {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: start;
+  height: 2.1875rem;
+  width: 41.375rem;
+  background-color: #151515;
+  position: absolute;
+  bottom: 0;
+}
+.player__volume {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 70px;
+  height: auto;
+  position: relative;
+  background: transparent;
+}
+.player__volume-wrapper {
+  margin-left: 5%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+.player__icon {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-right: 10px;
+}
+.player__icon-img {
+  width: 1.25rem;
+  height: 1.25rem;
+}
+.player__start {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-left: 5%;
+  margin-right: 3%;
+  background: url(../../img/player/play.svg) no-repeat;
+  width: 1.25rem;
+  height: 1.25rem;
+  margin-top: 7px;
+  cursor: pointer;
+}
+.player__start.active {
+  background: url(../../img/player/pause.svg) no-repeat;
+}
+.player__wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: start;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: start;
+  position: relative;
+}
+.player__splash {
+  position: absolute;
+  cursor: pointer;
+  width: 41.375rem;
+  height: 24.5rem;
+  background: url(../../img/player/player_bg.png) top left no-repeat;
+  background-size: 100% 100%;
+}
+.player__splash-icon {
+  display: inline-block;
+  position: absolute;
+  width: 50px;
+  height: 71px;
+  top: 40%;
+  left: 45%;
+}
+.player__splash.active {
+  display: none;
+}
+.player__elem {
+  width: 41.375rem;
+  height: 24.5rem;
+}
+
+.slider__volume {
+  z-index: 2;
+  border-radius: 2px;
+  background: #333333;
+  width: 100px;
+  height: 4px;
+  cursor: pointer;
+}
+.slider__volume .ui-slider-handle {
+  position: absolute;
+  z-index: 2;
+  width: 12px;
+  height: 12px;
+  border-radius: 50%;
+  background-color: #E01F3D;
+  top: 33%;
+  margin-left: -5%;
+}
+.slider__volume .ui-slider-range {
+  background: #E01F3D;
+  position: absolute;
+  border: 0;
+  top: 42%;
+  height: 4px;
+  border-radius: 2px;
+}
+
+.player__slider-timing {
+  cursor: pointer;
+  z-index: 2;
+  -ms-flex-negative: 0;
+      flex-shrink: 0;
+  border-radius: 2px;
+  background: #333333;
+  width: 442px;
+  height: 4px;
+}
+.player__slider-timing > .ui-slider-handle {
+  position: absolute;
+  z-index: 2;
+  width: 12px;
+  height: 12px;
+  border-radius: 50%;
+  background-color: #E01F3D;
+  top: 33%;
+  margin-left: -5px;
+}
+.player__slider-timing > .ui-slider-range {
+  background: #E01F3D;
+  position: absolute;
+  border: 0;
+  top: 42%;
+  height: 4px;
+  border-radius: 2px;
+}
+
+.player__slider-timing-wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  position: relative;
 }
