--- a/css/main.css
+++ b/css/main.css
@@ -2190,14 +2190,14 @@ img {
           align-items: center;
   margin-left: 5%;
   margin-right: 3%;
-  background: url(../../img/player/play.svg) no-repeat;
+  background: url(.././img/player/play.svg) no-repeat;
   width: 1.25rem;
   height: 1.25rem;
   margin-top: 7px;
   cursor: pointer;
 }
 .player__start.active {
-  background: url(../../img/player/pause.svg) no-repeat;
+  background: url(.././img/player/pause.svg) no-repeat;
 }
 .player__wrapper {
   display: -webkit-box;
@@ -2216,7 +2216,7 @@ img {
   cursor: pointer;
   width: 41.375rem;
   height: 24.5rem;
-  background: url(../../img/player/player_bg.png) top left no-repeat;
+  background: url(.././img/player/player_bg.png) top left no-repeat;
   background-size: 100% 100%;
 }
 .player__splash-icon {
